tests/suite/snapshots/suite__check__tests__check__bad_pa3_7.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_pa3_7.xi:4:9]
   │
 4 │     foo({25 + 47})
   ·         ────┬────  
   ·             ╰────── Expected bool[] but found int[]
───╯

